--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.4",
+    "@tailwindcss/vite": "^4.0.5",
+    "framer-motion": "^12.4.1",
+    "latest": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.4"
+    "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
