--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/poppins": "^5.1.1",
     "@tailwindcss/vite": "^4.0.4",
+    "framer-motion": "^12.4.2",
     "rc-progress": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
