--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@fontsource/poppins": "^5.1.1",
     "@tailwindcss/vite": "^4.0.4",
+    "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
     "rc-progress": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
