--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "tailwind-scrollbar": "^4.0.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
